    #lisp)
  * fixed bug 141b: printing backquoted information readably and prettily
    inserts a space where necessary.
  * bug fix: obviously wrong type specifiers such as (FIXNUM 1) or
    (CHARACTER 10) are now reported as errors, rather than propagated
    as unknown types.  (reported by piso on #lisp)
  * bug fix: the :IF-EXISTS argument to OPEN now behaves correctly
    with values NIL and :ERROR.  (thanks to Milan Zamazal)
  * compiler enhancement: SIGNUM is now better able to derive the type
    of its result.
  * type declarations inside WITH-SLOTS are checked.  (reported by
    salex on #lisp)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** incorrect optimization of TRUNCATE for a positive first
       argument and negative second.
    ** compiler failure in let-convertion during flushing dead code.
    ** compiler failure while deriving type of TRUNCATE on an
       interval, containing 0.
    ** ASH of a negative bignum by a negative bignum count now returns
       -1, not 0.
    ** intersection of CONS types now canonicalizes properly, fixing
       inconsistencies in SUBTYPEP.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.